# rendering_engine

./: CMakeLists.txt
data/: model.vs  simple.frag
include/: camera.h  mesh.h  model.h  renderer.h  rigid_object.h  shader.h
src/: camera.cpp  mesh.cpp  model.cpp  opengl_integration.cpp  renderer.cpp  rigid_object.cpp
